--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-ciachss
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Przykładowa Strona z Linkiem JavaScript</title>
+</head>
+<body>
+<h1>Przykładowa Strona z Linkiem JavaScript</h1>
+<p>Kliknij poniższy link, aby wywołać przekierowanie za pomocą JavaScript:</p>
+<a href="#" id="redirectLink">Przejdź do strony atakującego</a>
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z5CDFM8SW3"></script>
+<script>
+
+window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Z5CDFM8SW3');
+
+// Funkcja wywołująca przekierowanie po kliknięciu na link
+document.getElementById('redirectLink').addEventListener('click', function(event) {
+    // Unikaj domyślnej akcji kliknięcia (przekierowania)
+    event.preventDefault();
+    // Wykonaj przekierowanie
+    window.location.href = 'https://imgur.com/0aoatUE';
+});
+</script>
+</body>
+</html>
