--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-Z5CDFM8SW3');
+  gtag('config', 'G-RHZ19B0KSR');
 
 // Funkcja wywołująca przekierowanie po kliknięciu na link
 document.getElementById('redirectLink').addEventListener('click', function(event) {
