--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
-    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-RHZ19B0KSR"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -10,23 +9,43 @@
 
   gtag('config', 'G-RHZ19B0KSR');
 </script>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Przykładowa Strona z Linkiem JavaScript</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Uwaga! Uległeś(aś) skutecznej próbie phishingu!</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+        }
+
+        h1 {
+            color: #ff0000;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        li {
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
-<h1>Przykładowa Strona z Linkiem JavaScript</h1>
-<p>Kliknij poniższy link, aby wywołać przekierowanie za pomocą JavaScript:</p>
-<a href="#" id="redirectLink">Przejdź do strony atakującego</a>
+    <h1>Uwaga! Uległeś(aś) skutecznej próbie phishingu!</h1>
+    <p>Wyłudzanie informacji, złośliwe oprogramowanie i ataki typu „odmowa usługi” były najczęstszymi przyczynami naruszeń danych w 2021 r.</p>
 
-<script>
-// Funkcja wywołująca przekierowanie po kliknięciu na link
-document.getElementById('redirectLink').addEventListener('click', function(event) {
-    // Unikaj domyślnej akcji kliknięcia (przekierowania)
-    event.preventDefault();
-    // Wykonaj przekierowanie
-    window.location.href = 'https://imgur.com/0aoatUE';
-});
-</script>
+    <p>Raport CISCO dotyczący trendów w zakresie cyberbezpieczeństwa w 2021 r. wskazuje, że phishing stanowi około 90% naruszeń danych, a co najmniej jedna osoba kliknęła łącze phishingowe w około 86% badanych organizacji.</p>
+
+    <h2>Zasady bezpieczeństwa w sieci:</h2>
+    <ol>
+        <li>Nie otwieraj wiadomości i załączników otrzymanych e-mailem od nieznanych nadawców.</li>
+        <li>Nie otwieraj żadnych linków załączonych do wiadomości pochodzących z nieznanego źródła.</li>
+        <li>Nigdy nie przesyłaj danych wrażliwych, tj. haseł i loginów w wiadomościach tekstowych czy mailowych.</li>
+    </ol>
+
+    <p>Działania prowadzone w ramach akcji edukacyjnej.</p>
 </body>
 </html>
