--- a/zasady-bezpieczenstwa/index.html
+++ b/zasady-bezpieczenstwa/index.html
@@ -8,7 +8,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-Z5CDFM8SW3');
+  gtag('config', 'G-RHZ19B0KSR');
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
