--- a/zasady-bezpieczenstwa/index.html
+++ b/zasady-bezpieczenstwa/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z5CDFM8SW3"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RHZ19B0KSR"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
